# nbi

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  acx_blas.m4  acx_lapack.m4  autogen.sh  bigfiles  config.h  config.h.in  config.status  configure  configure.ac  configure.safe  install-nbi  libtool  nbi.pc  nbi.pc.in
.github/workflows/: docker-publish.yml  draft-pdf.yml
JOSS/: codemeta.json  paper.bib  paper.md
autom4te.cache/: output.0  output.1  output.10  output.11  output.13  output.2  output.4  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.13  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
data/: ellipsoid.agg  errors-test-ico  fcsource.bc  fsource.bc  fuselage-test  fuselage-test-helmholtz  fuselage.agg  fuselage1.agg  geometry.safe  gmon.out  log  mkgrid.m  nacelle.agg  nacelle.nbi  pcsource.bc  profile  psource.bc  ring.bc  sphere-test  sphere-test-helmholtz  sphere.agg  surface.geo  test-run  test-run-ico  test.agg  test.msh  tlog  tlog-1  wcsource.bc  wing-test  wing-test-helmholtz  wing.agg  wsource.bc
doc/: Makefile  Makefile.in  nbi.dxy  nbi.dxy.bak
doc/html/: Makefile  Makefile.am  Makefile.in  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  group__boundary.html  group__export.html  group__expressions.html  group__geometries.html  group__matrix.html  group__surfaces.html  group__surfaces.js  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  nbi-process.html  nbi_8h.html  nbiassemblehelmholtz.html  nbiassemblelaplace.html  nbifieldhelmholtz.html  nbifieldlaplace.html  nbiprocess.html  nbisolvehelmholtz.html  nbisolvelaplace.html  nbisurface.html  pages.html
doc/latex/: group__boundary.tex  group__matrix.tex  group__surfaces.tex  index.tex  modules.tex  refman.tex
examples/: README  README.md  docker-helmholtz  docker-laplace  solve-helmholtz  solve-laplace  test-all-helmholtz  test-all-laplace
examples/AGG/: agg-helmholtz  aircraft.agg  aircraft.geo  pcsource.bc  ring.bc  sphere.agg  surface.geo
examples/Catseye/: catseye-laplace  catseye.geo  make-geometry  pcsource.bc  pcsource.bc.in  psource.bc
examples/Flow/: README  axial.bc  make-geometry  make-visualization-grid  sphcheck.m
examples/GMSH/: aircraft.geo  gmsh-helmholtz  pcsource.bc  wing.agg  wing.geo
examples/Rotor/: ksp-options  log  make-geometry  make-visualization-grid  nacelle.agg  octave-workspace  pcsource.bc  ring.bc  ring.bc.in  rotor-helmholtz  tt  tube.agg  tube.geo
examples/Scattering/: README  log  make-geometry  make-visualization-grid  pcsource.bc  plane.bc  plane.bc.in  sphcheck.m  sphere-scattering  sphere.agg
examples/SphereHelmholtz/: make-geometry  make-visualization-grid  pcsource.bc  pcsource.bc.in  ring.bc  ring.bc.in  sphere-helmholtz  tmpfile
examples/SphereLaplace/: display-mesh  ksp-options  make-geometry  psource.bc  sphere-laplace  sphere.agg  tmpfile
examples/Wing/: ksp-options  make-geometry  make-visualization-grid  pcsource.bc  pcsource.bc.in  psource.bc  sphere.agg  wing-helmholtz  wing-laplace  wing.agg
notes/: _region_.tex  notes.aux  notes.tex
notes/auto/: notes.el
octave/: datread.m  idxread.m  nbidata.m  nbisurf.m  ring.m  sphpot.m  sphscat.m  sphtest.m  sptarea.m  surfread.m
src/: Makefile  Makefile.am  Makefile.in  agg.c  agg.h  agg.lo  assemble.c  assemble.lo  documentation.c  documentation.c.in  doxy.txt  export.c  expressions.c  expressions.lo  files.c  files.lo  functions.c  functions.lo  geometries.c  geometries.lo  gmsh.c  gmsh.lo  helmholtz.c  helmholtz.lo  laplace.c  laplace.lo  libnbi.la  libsolvers.la  libsolvers_la-solvers.lo  nbi-config  nbi-config.in  nbi-private.h  nbi.c  nbi.h  nbi.lo  solvers.c  solvers.lo  sqt.h  tinyexpr.c  tinyexpr.lo  (+1 more)
src/.deps/: agg.Plo  assemble.Plo  export.Plo  expressions.Plo  files.Plo  functions.Plo  geometries.Plo  geometries.Po  gmsh.Plo  helmholtz.Plo  laplace.Plo  libsolvers_la-solvers.Plo  nbi.Plo  nbi.Po  solvers.Plo  tinyexpr.Plo
src/.libs/: libnbi-0.1.so.0  libnbi-0.1.so.0.0.0  libnbi-1.0.so.0  libnbi-1.0.so.0.0.0  libnbi-1.0.so.0.0.0T  libnbi.la  libnbi.lai  libsolvers.la
tools/: Makefile  Makefile.am  Makefile.in  get-petsc-flags  nbi-assemble  nbi-assemble-helmholtz  nbi-assemble-helmholtz.c  nbi-assemble-laplace  nbi-assemble-laplace.c  nbi-assemble.c  nbi-field-helmholtz  nbi-field-helmholtz.c  nbi-field-laplace  nbi-field-laplace.c  nbi-process  nbi-process.c  nbi-solve  nbi-solve-helmholtz  nbi-solve-helmholtz.c  nbi-solve-laplace  nbi-solve-laplace.c  nbi-solve.c  nbi-surface  nbi-surface.c  petsc-config  petsc-flags.tmp  petsc-helmholtz.c  petsc-laplace.c  petsc-makefile  petsc-version.c  safe
tools/.deps/: nbi-assemble-helmholtz.Po  nbi-assemble-laplace.Po  nbi-assemble.Po  nbi-field-helmholtz.Po  nbi-field-laplace.Po  nbi-process.Po  nbi-solve-helmholtz.Po  nbi-solve-laplace.Po  nbi-solve.Po  nbi-surface.Po  nbi_solve_helmholtz-nbi-solve-helmholtz.Po  nbi_solve_helmholtz-petsc-helmholtz.Po  nbi_solve_laplace-nbi-solve-laplace.Po  nbi_solve_laplace-petsc-laplace.Po  petsc-helmholtz.Po  petsc-laplace.Po
tools/.libs/: lt-nbi-assemble-helmholtz  lt-nbi-assemble-laplace  lt-nbi-field-helmholtz  lt-nbi-field-laplace  lt-nbi-process  lt-nbi-solve-helmholtz  lt-nbi-solve-laplace  lt-nbi-surface  nbi-assemble-helmholtz  nbi-assemble-laplace  nbi-field-helmholtz  nbi-field-laplace  nbi-process  nbi-solve-helmholtz  nbi-solve-laplace  nbi-surface
